# rcm-tauri

./: .gitignore  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json
.github/workflows/: release.yml
rcm/: package.json
rcm-sys/: package.json
rcm-sys/src/: index.ts
rcm/src/: default.ts  index.ts  ssh.ts  vscode.ts
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  pipe.rs  rcm.rs  registry.rs  tray.rs  vm.rs
