[package]
name = "rcm-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rcm_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.56"
windows = { version = "0.62", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Management_Deployment",
  "ApplicationModel",
  "Graphics",
  "Win32_System_SystemInformation",
] }
rdev = { git = "https://github.com/Narsil/rdev", features = ["serialize"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rquickjs = { version = "0.11", features = ["loader"], default-features = false }
anyhow = "1"
llrt_modules = { git = "https://github.com/awslabs/llrt", features = [ ] }
